# uzh_fpv_open

./: .gitignore  CMakeLists.txt  README.md  gt_to_leica_error.md  package.xml  requirements.txt  setup.py  spline_tutorial.md
python/uzh_fpv/: bspline.py  bspline_opt.py  calibration.py  casadi_pose.py  flags.py  generalized_time.py  ground_truth.py  leica.py  linear_interpolation.py  min_bags.py  plots.py  pose.py  util.py
scripts/: align_spline_to_leica.py  batch_check_ground_truths.py  batch_degroundtruth.py  compare_gyro.py  evaluate_discretizations.py  fit_spline_to_gt.py  make_min_imu_gto_bag.py  match_davis_to_snapdragon_gt.py  plot_leica.py  plot_leica_vs_gt.py  print_all_names.py  print_files_to_publish.py  render_gt_projection.py  report_aligned_gt_error.py  summarize_gt_error.py
