<?xml version="1.0"?>
<package format="2">
  <name>uzh_fpv</name>
  <version>0.0.0</version>
  <description>
    Code to accompany the UZH FPV dataset.
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rosbag</depend>
  <depend>rospy</depend>
</package>
